Finalizando implementação de paginação e ordenação na listagem de categorias